--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "server": "nodemon index.js",
+    "migrate": "knex migrate:latest",
+    "rollback": "knex migrate:rollback",
+    "seed": "knex seed:run",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,5 +21,21 @@
   "bugs": {
     "url": "https://github.com/Water-My-Plants-Build-Week-Project/backend/issues"
   },
-  "homepage": "https://github.com/Water-My-Plants-Build-Week-Project/backend#readme"
+  "homepage": "https://github.com/Water-My-Plants-Build-Week-Project/backend#readme",
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "nodemon": "^2.0.12",
+    "set-cookie-parser": "^2.4.8"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-session-knex": "^2.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "helmet": "^4.6.0",
+    "knex": "^0.95.11",
+    "sqlite3": "^5.0.2"
+  }
 }
