--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
   },
   "homepage": "https://github.com/Water-My-Plants-Build-Week-Project/backend#readme",
   "devDependencies": {
+    "@types/jest": "^27.0.2",
+    "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
+    "jest": "^27.2.2",
     "nodemon": "^2.0.12",
-    "set-cookie-parser": "^2.4.8"
+    "set-cookie-parser": "^2.4.8",
+    "supertest": "^6.1.6"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
